--- a/model/credentials.ini
+++ b/model/credentials.ini
@@ -1,7 +1,13 @@
+[database]
 DB_HOST=localhost
 DB_USER=root
 DB_PASS=
 DB_DATABASE=cityhouse
+
+[ultramsg]
+ULTRA_MESSAGE_TOKEN=xpfkoq9wdb9gyxsq
+INSTANCE_ID_ULTRAMSG=instance86725
+TLF_NUMBER=610717692
 
 ; DB_PORT=3306
 ; DB_TABLE=viviendas
