--- a/utils/composer.json
+++ b/utils/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
         "resend/resend-php": "^0.12.0",
-        "ultramsg/whatsapp-php-sdk": "^2.0"
+        "ultramsg/whatsapp-php-sdk": "^2.0",
+        "tecnickcom/tcpdf": "^6.7"
     }
 }
